# MRFM_BrownianFit

./: LICENSE  README.md  pyproject.toml
examples/: 2025-02-06_153525_python-Brownian_16s-1x_FFT.h5  Brownian_fit_example.ipynb  MRFM_Brownianfit_csv_example.ipynb  MRFM_Brownianfit_h5_example.ipynb  MRFM_Brownianfit_h5_example.md  MRFM_Brownianfit_h5_example_efm.ipynb  brownian_k_20250701_8avgs.csv  brownian_k_20250701_8avgs.h5  example_20250314.tex  example_brownian_031425.csv  mrfm_brownian_fit_test_20250522_KLB.ipynb  test_brownian.py
examples/example_outputs/: 20250701_baysian_8avgs.tex  MRFM_Brownianfit_h5_example_full_NB.html  brownian_example_20250924.tex  brownian_k_20250924_145412_.tex
src/MRFM_BrownianFit/: LabVIEW_int.py  MCMC.py  brownian_fit.py
src/MRFM_BrownianFit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/brownian_fit_class/: LabVIEW_int.py  brownian_fit.py
tests/: brownian_k_20250924_145412_.h5  example_brownian_031425.csv  test_brownian_fit.py
