[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
   { name = "Katrina L. Brown", email = "klb346@cornell.edu"},
]
name = "brownian_fit_class"
version = "0.0.2"
dependencies = [
   "numpy == 1.24.4",
   "matplotlib == 3.7.5 ",
   "pytest",
   "scipy == 1.9.1",
   "lmfit == 1.3.2",
   "pandas <= 2.0.3"
]