[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
   { name = "Katrina L. Brown", email = "klb346@cornell.edu"},
]
name = "MRFM_BrownianFit"
version = "1.0.0"
dependencies = [
   "numpy == 1.24.4",
   "matplotlib == 3.7.5 ",
   "pytest",
   "scipy == 1.9.1",
   "lmfit == 1.3.2",
   "pylatex"
   "pdflatex"
]